<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rocketflow</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="next">Next</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="enter_mobile">"Please enter mobile number"</string>
    <string name="made_in_india">Made In India</string>
    <string name="we_will_send_an_sms_with_a_confirmation_ncode_to_this_number">We will send an SMS with a confirmation \ncode to this number</string>
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="change_access_id">Change Access Id</string>
    <string name="access_id">Enter Access Id</string>
    <string name="email">Email (Optional)</string>
    <string name="email_id">Email ID</string>
    <string name="email_id_colon">Email ID :</string>
    <string name="name_cannot_be_empty">Name must be at least two character.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="let_s_get_started">Let\'s get Started</string>
    <string name="you_will_receive_six_digit_code_for_future_verification_code">You will receive 6 digit code for further verification</string>
    <string name="please_enter_verification_code_sent_to">Please enter verification code sent to</string>
    <string name="_00_59">00:59</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="registration_no">Registration No.</string>
    <string name="model">Model</string>
    <string name="invalid_registration_no">Invalid Registration no.</string>
    <string name="model_cannot_be_empty">Model cannot be empty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="sos">SOS</string>
    <string name="retry">Retry</string>
    <string name="_new">New</string>
    <string name="add_buddy">Add Buddy</string>
    <string name="to">\tTo</string>
    <string name="from">\tFrom</string>
    <string name="from_colon">From :</string>
    <string name="to_colon">To : \t</string>
    <string name="shift_timing">Shift Timing</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="select_shift_start_time">Shift start time cannot be empty</string>
    <string name="select_shift_end_time">Shift end time cannot be empty</string>
    <string name="start_time_cannot_be_greater">Shift start time cannot be greater or equal than end time</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="please_select_task_type">Please select task type</string>
    <string name="code">Code</string>
    <string name="password">Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="notification">Notification</string>
    <string name="share">Share</string>
    <string name="my_account">My Account</string>
    <string name="my_accounts">Select Accounts</string>
    <string name="my_profile">My Profile</string>
    <string name="tracking_buddy">RocketFlow Buddy</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="submit">Submit</string>
    <string name="proceed">Proceed</string>
    <string name="please_add_a_valid_number_to_proceed">Please add a valid number to proceed</string>
    <string name="the_number"><![CDATA[The number will be updated in your user profile & shall be used to send transaction related updates.]]></string>
    <string name="change_mobile">Change Mobile No.</string>
    <string name="change_password">Change Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="tracking_me">Tracking Me</string>
    <string name="i_am_tracking">I am Tracking</string>
    <string name="cancel_buddy_tracking_request">Are you sure you want to cancel tracking request?</string>
    <string name="delete_user">Are you sure you want to delete?</string>
    <string name="delete_user_address">Are you sure you want to delete this address?</string>
    <string name="tasks">Tasks</string>
    <string name="timeline">Time Line</string>
    <string name="assigned_to_me">Assigned to Me</string>
    <string name="i_have_assigned">I have Assigned</string>
    <string name="cancel_tracking_request">Cancel Tracking Request</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="end_task_text">Are you sure you want to end this task?</string>
    <string name="cancel_task_text">Are you sure you want to cancel this task?</string>
    <string name="start_task_text_1">Are you sure you want to start the task now?</string>
    <string name="start_task_text">Are you sure you want to start the task now? Your waiting time will be ended.</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset">Reset</string>
    <string name="delete_buddy">Are you sure you want to delete this Buddy?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_buddy">Select Buddy</string>
    <string name="employee">Employee</string>
    <string name="my_buddy">My Buddy</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="add_fleet">Add Fleet</string>
    <string name="fleet_details">Fleet Details</string>
    <string name="edit">Edit</string>
    <string name="search_hint">Search</string>
    <string name="fleet">Fleet</string>
    <string name="notifications">Notifications</string>
    <string name="clear">clear</string>
    <string name="accept">Accept</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="buddy_status">Buddy Status</string>
    <string name="offline">Offline</string>
    <string name="idle">Idle</string>
    <string name="live">Live</string>
    <string name="all">All</string>
    <string name="filters">Filters</string>
    <string name="assign_now">Assign Now</string>
    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name</string>
    <string name="start_date_time">Start Date/Time</string>
    <string name="end_date_time">End Date/Time</string>
    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>
    <string name="description">Description</string>
    <string name="select_buddy_to_create_task">Select Buddy to create task</string>
    <string name="select_fleet">Select Fleet</string>
    <string name="skip">Skip</string>
    <string name="alerts">Alerts</string>
    <string name="no_statistics">No Statistics</string>
    <string name="cancel">Cancel</string>
    <string name="start_now">Start Now</string>
    <string name="arrive">Arrive</string>
    <string name="reach">Reach</string>
    <string name="buddy_statistics">Buddy Statistics</string>
    <string name="trip_statistics">Trip Statistics</string>
    <string name="end_time_cannot_be_less_than_start_time">End time cannot be less or equals to Start time</string>
    <string name="no_past_date">Date cannot be in past</string>
    <string name="we_re_sorry_but_something_went_wrong">Oops, something went wrong. Please try agai​n!</string>
    <string name="enable_location_message">It seems your location service not enable. if you want use this app , please enable you location</string>
    <string name="enable_location_service">Enable location Service</string>
    <string name="reload_now">Reload Now</string>
    <string name="enable_now">Enable Now</string>
    <string name="Upload">Upload File</string>
    <string name="your_referal_code">Your Referral Code</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="tap_to_copy">Tap to Copy</string>
    <string name="invite_your_contacts">Invite Your Contacts</string>
    <string name="pick_image_intent_text">Select Image</string>
    <string name="it_seems_nobuddy_is_tracking_you">It seems nobuddy is tracking you.</string>
    <string name="it_seems_you_are_not_tracking_any_buddy">It seems you are not tracking any buddy.</string>
    <string name="no_fleet_in_your_profile">No fleet in your profile!</string>
    <string name="to_start_track_your_buddy_assign_task_add_your_fleet">To start Track your buddy/Assign task \n add your Fleet</string>
    <string name="nobuddy_in_your_profile">Nobuddy in your profile!</string>
    <string name="you_don_t_have_any_notification_yet">You don’t have any notification yet</string>
    <string name="no_dash_board_data">No Dashboard Data</string>
    <string name="please_check_your_internet_connection_you_are_offline_now">Please check your internet connection, \n You are offline now!…</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="no_internet">No Internet!..</string>
    <string name="it_seems_there_is_no_task_n_assigned_yet">It seems there is no task \n assigned yet.</string>
    <string name="it_seems_there_is_no_places_yet">It seems there is no place added yet.</string>
    <string name="logout">Logout</string>
    <string name="logout_now">Logout Now</string>
    <string name="by_doing_this_following_action_will_be_perform_by_them_system">By doing this following actions will be performed automatically</string>
    <string name="logout_text">Logging Out !</string>
    <string name="delete" tools:ignore="ExtraTranslation">Delete</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to Logout?</string>
    <string name="are_you_sure_want_to_delete_this_place" tools:ignore="ExtraTranslation">Are you sure want to delete this place?</string>
    <string name="settings">Settings</string>
    <string name="configure_message_to_be_sent_in_case_of_emergency">Configure message to be sent in case of emergency</string>
    <string name="details">Details</string>
    <string name="remarks">Remarks</string>
    <string name="date_header">Date</string>
    <string name="status_header">Status</string>
    <string name="duration_header">Working hours</string>
    <string name="colon">:</string>
    <string name="_1234567890">1234567890</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_code">Employee Code</string>
    <string name="e_102">E-102</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_abc">Driver ABC</string>
    <string name="cab_type">Cab Type</string>
    <string name="cab_number">Cab Number</string>
    <string name="hr_1234">HR-1234</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="samaspur_village_ocus_quantum_section_51">Samaspur village, Ocus Quantum, Section 51</string>
    <string name="drop_location">Drop Location</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="_09_06_2021_09_30">09/06/2021 09:30</string>
    <string name="drop_time">Drop Time</string>
    <string name="video">Video</string>
    <string name="profile_image">Profile Image</string>
    <string name="payment_completed">Payment Completed</string>
    <string name="hello_sanjeev">Hello Sanjeev</string>
    <string name="rs_349">₹ 349.00</string>
    <string name="transaction_success_message">You have successfully added money to your wallet!</string>
    <string name="payment_incompleted">Payment Incompleted</string>
    <string name="transaction_cancel_message">The last transaction to add money into your wallet was unsuccessful. Please try again!</string>
</resources>