<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/blue"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1234567890"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/employee_name"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/employee_code"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_102"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/driver_name"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_abc"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/cab_type"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_102"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/cab_number"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr_1234"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/pickup_location"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samaspur_village_ocus_quantum_section_51"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/drop_location"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samaspur_village_ocus_quantum_section_51"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/pickup_time"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_09_06_2021_09_30"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/drop_time"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_09_06_2021_09_30"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <com.tracki.utils.MyVideoView
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_100"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginHorizontal="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dimen_130"
            android:layout_height="wrap_content"
            android:text="@string/profile_image"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</LinearLayout>