<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/dimen_10"
        android:layout_gravity="center_vertical"
        android:paddingVertical="@dimen/dimen_10"
        android:paddingHorizontal="@dimen/dimen_20"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_payment_status"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/payment_completed"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_hello"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/hello_sanjeev"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20" />

        <ImageView
            android:id="@+id/iv_image_status"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="@dimen/dimen_40"
            android:layout_height="@dimen/dimen_40"
            android:src="@drawable/ic_green_tick"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_amount"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/rs_349"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_24" />

        <View
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/md_grey_400" />

        <TextView
            android:id="@+id/tv_msg"
            android:textAlignment="center"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/transaction_success_message"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />

    </LinearLayout>

</layout>