<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.tracki.ui.attendance.attendance_tab.AttendanceHeaderItemViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_5">

            <TextView
                android:id="@+id/tvDate"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/date_header"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvStatus"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/status_header"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTimeSpent"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/duration_header"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_8"
            android:background="@color/windowBackgroundColor" />
    </LinearLayout>
</layout>